--- a/src/ui/FXMLMOCKUP.fxml
+++ b/src/ui/FXMLMOCKUP.fxml
@@ -2,32 +2,101 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="34.0" layoutY="32.0" text="Informacion del estudiante" />
-      <ImageView fitHeight="85.0" fitWidth="78.0" layoutX="66.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="400.0" fitWidth="407.0" layoutX="104.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@410909.png" />
+            <Image url="@../../documents/images/diseno-fondo-agenda_1268-606.jpg" />
          </image>
       </ImageView>
-      <TextArea layoutX="260.0" layoutY="41.0" prefHeight="136.0" prefWidth="307.0" />
-      <Button layoutX="515.0" layoutY="188.0" mnemonicParsing="false" text="Agregar" />
-      <Label layoutX="34.0" layoutY="192.0" text="Nombre del estudiante" />
-      <TableView layoutX="34.0" layoutY="221.0" prefHeight="154.0" prefWidth="190.0">
-        <columns>
-          <TableColumn prefWidth="75.0" text="Lunes" />
-          <TableColumn prefWidth="75.0" text="Martes" />
-        </columns>
-      </TableView>
-      <TextArea layoutX="278.0" layoutY="221.0" prefHeight="125.0" prefWidth="246.0" />
-      <Button layoutX="274.0" layoutY="363.0" mnemonicParsing="false" text="Agregar" />
+      <Label layoutX="395.0" layoutY="4.0" text="Informacion del estudiante">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font></Label>
+      <Button layoutX="545.0" layoutY="182.0" mnemonicParsing="false" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="Editar" />
+      <TextArea disable="true" layoutX="322.0" layoutY="232.0" opacity="0.68" prefHeight="82.0" prefWidth="246.0" />
+      <ImageView fitHeight="125.0" fitWidth="129.0" layoutX="183.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../documents/images/avatar-icon-vector-illustration.jpg" />
+         </image>
+      </ImageView>
+      <Label layoutX="325.0" layoutY="51.0" opacity="0.83" prefHeight="21.0" prefWidth="61.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Numero">
+         <font>
+            <Font name="Ebrima Bold" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="395.0" layoutY="51.0" opacity="0.83" prefHeight="21.0" prefWidth="199.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text=" ">
+         <font>
+            <Font name="Ebrima Bold" size="13.0" />
+         </font>
+      </Label>
+      <Button layoutX="325.0" layoutY="322.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="85.0" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="Agregar Nota">
+         <font>
+            <Font size="10.0" />
+         </font></Button>
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="168.0" layoutY="11.0" opacity="0.83" prefHeight="27.0" prefWidth="154.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Nombre del estudiante">
+         <font>
+            <Font name="Ebrima Bold" size="12.0" />
+         </font>
+      </Label>
+      <Button layoutX="555.0" layoutY="359.0" mnemonicParsing="false" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="&gt;" />
+      <Button layoutX="511.0" layoutY="359.0" mnemonicParsing="false" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="&lt;" />
+      <Label layoutX="262.0" layoutY="238.0" opacity="0.85" prefHeight="21.0" prefWidth="49.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Notas:">
+         <font>
+            <Font name="Ebrima Bold" size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="322.0" layoutY="157.0" opacity="0.83" prefHeight="21.0" prefWidth="85.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Cumpleaños">
+         <font>
+            <Font name="Ebrima Bold" size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="325.0" layoutY="123.0" opacity="0.83" prefHeight="21.0" prefWidth="61.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Edad">
+         <font>
+            <Font name="Ebrima Bold" size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="325.0" layoutY="87.0" opacity="0.83" prefHeight="21.0" prefWidth="61.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Correo">
+         <font>
+            <Font name="Ebrima Bold" size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="412.0" layoutY="157.0" opacity="0.83" prefHeight="21.0" prefWidth="184.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text=" ">
+         <font>
+            <Font name="Ebrima Bold" size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="395.0" layoutY="87.0" opacity="0.83" prefHeight="21.0" prefWidth="199.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text=" ">
+         <font>
+            <Font name="Ebrima Bold" size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="396.0" layoutY="123.0" opacity="0.83" prefHeight="21.0" prefWidth="199.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text=" ">
+         <font>
+            <Font name="Ebrima Bold" size="13.0" />
+         </font>
+      </Label>
+      <ScrollPane layoutX="14.0" layoutY="49.0" opacity="0.78" prefHeight="339.0" prefWidth="142.0">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="342.0" prefWidth="141.0" />
+        </content>
+      </ScrollPane>
+      <Label layoutX="45.0" layoutY="14.0" text="Contactos">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
+      <Button layoutX="168.0" layoutY="364.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="Añadir Contacto">
+         <font>
+            <Font size="10.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
