--- a/src/ui/FXMLMOCKUP1.fxml
+++ b/src/ui/FXMLMOCKUP1.fxml
@@ -1,34 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="14.0" layoutY="14.0" prefHeight="25.0" prefWidth="79.0" text="Busqueda" />
-      <ComboBox layoutX="14.0" layoutY="55.0" prefWidth="150.0" />
-      <ImageView fitHeight="100.0" fitWidth="112.0" layoutX="33.0" layoutY="100.0">
+      <ImageView fitHeight="407.0" fitWidth="600.0" layoutY="-5.0" opacity="0.84">
          <image>
-            <Image url="@410909.png" />
+            <Image url="@../../documents/images/scheduleback.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="19.0" layoutY="216.0" text="Nombre del documento" />
-      <TextArea layoutX="239.0" layoutY="50.0" prefHeight="154.0" prefWidth="294.0" />
-      <Label layoutX="239.0" layoutY="27.0" text="Informacion del estudiante" />
-      <Label layoutX="19.0" layoutY="257.0" text="Materias" />
-      <TableView layoutX="19.0" layoutY="282.0" prefHeight="100.0" prefWidth="105.0">
-        <columns>
-          <TableColumn prefWidth="128.00003051757812" text="Materia1" />
-          <TableColumn prefWidth="22.0" text="C2" />
-        </columns>
-      </TableView>
-      <TextArea layoutX="239.0" layoutY="257.0" prefHeight="126.0" prefWidth="294.0" />
+      <TextArea layoutX="243.0" layoutY="72.0" opacity="0.89" prefHeight="154.0" prefWidth="294.0" />
+      <Label layoutX="24.0" layoutY="15.0" opacity="0.83" prefHeight="42.0" prefWidth="199.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Materias">
+         <font>
+            <Font name="Ebrima Bold" size="19.0" />
+         </font>
+      </Label>
+      <Label layoutX="243.0" layoutY="15.0" opacity="0.83" prefHeight="42.0" prefWidth="259.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Informacion de las materias">
+         <font>
+            <Font name="Ebrima Bold" size="19.0" />
+         </font>
+      </Label>
+      <Button layoutX="565.0" layoutY="369.0" mnemonicParsing="false" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="&gt;" />
+      <Button layoutX="520.0" layoutY="369.0" mnemonicParsing="false" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="&lt;" />
+      <ScrollPane layoutX="26.0" layoutY="72.0" opacity="0.87" prefHeight="277.0" prefWidth="196.0">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" opacity="0.0" prefHeight="286.0" prefWidth="160.0" />
+        </content>
+      </ScrollPane>
+      <Button layoutX="390.0" layoutY="262.0" mnemonicParsing="false" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="Clasificar por creditos" />
+      <Button layoutX="250.0" layoutY="316.0" mnemonicParsing="false" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="Clasificar por NRC" />
+      <Button layoutX="250.0" layoutY="262.0" mnemonicParsing="false" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="Clasificar por nombre" />
+      <Button layoutX="390.0" layoutY="316.0" mnemonicParsing="false" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="Clasificar por nombre de profesor" />
+      <Button layoutX="26.0" layoutY="356.0" mnemonicParsing="false" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="Agregar Materias" />
    </children>
 </AnchorPane>
