--- a/src/ui/FXMLMOCKUP2.fxml
+++ b/src/ui/FXMLMOCKUP2.fxml
@@ -1,37 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="21.0" layoutY="16.0" text="Resumen">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="33.0" layoutY="71.0" text="Promedio de materias matriculadas" />
-      <Label layoutX="33.0" layoutY="99.0" text="Promedio por cerditos matriculados" />
-      <Label layoutX="33.0" layoutY="128.0" text="Materia mas matricualda" />
-      <Label layoutX="33.0" layoutY="157.0" text="Materia menos matricualda" />
-      <TableView layoutX="36.0" layoutY="258.0" prefHeight="128.0" prefWidth="329.0">
-        <columns>
-          <TableColumn prefWidth="165.0" text="Mateira menos matriculada" />
-            <TableColumn prefWidth="163.0" text="Materia mas matriculada" />
-        </columns>
-      </TableView>
-      <TextArea layoutX="274.0" layoutY="16.0" prefHeight="200.0" prefWidth="288.0" />
-      <ImageView fitHeight="92.0" fitWidth="102.0" layoutX="430.0" layoutY="260.0">
+      <ImageView fitHeight="407.0" fitWidth="607.0" layoutX="-1.0" layoutY="-1.0" opacity="0.79">
          <image>
-            <Image url="@410909.png" />
+            <Image url="@../../documents/images/resumenback.jpg" />
          </image>
       </ImageView>
+      <Label alignment="CENTER" layoutX="203.0" layoutY="6.0" opacity="0.83" prefHeight="42.0" prefWidth="199.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Resumen">
+         <font>
+            <Font name="Ebrima Bold" size="19.0" />
+         </font>
+      </Label>
+      <ScrollPane layoutX="391.0" layoutY="86.0" opacity="0.87" prefHeight="301.0" prefWidth="196.0">
+         <content>
+            <AnchorPane minHeight="0.0" minWidth="0.0" opacity="0.0" prefHeight="335.0" prefWidth="160.0">
+               <children>
+                  <Button alignment="CENTER" layoutX="-81.0" layoutY="23.0" mnemonicParsing="false" opacity="0.82" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Promedio de materias matriculadas">
+                     <font>
+                        <Font name="Ebrima Bold" size="13.0" />
+                     </font>
+                  </Button>
+               </children>
+            </AnchorPane>
+         </content>
+      </ScrollPane>
+      <Label alignment="CENTER" layoutX="390.0" layoutY="56.0" opacity="0.83" prefHeight="27.0" prefWidth="199.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Materias">
+         <font>
+            <Font name="Ebrima Bold" size="19.0" />
+         </font>
+      </Label>
+      <Button alignment="CENTER" layoutX="30.0" layoutY="55.0" mnemonicParsing="false" opacity="0.82" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Materia mas matriculada">
+         <font>
+            <Font name="Ebrima Bold" size="13.0" />
+         </font>
+      </Button>
+      <Button alignment="CENTER" layoutX="34.0" layoutY="279.0" mnemonicParsing="false" opacity="0.82" prefHeight="29.0" prefWidth="243.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Promedio por creditos matriculados">
+         <font>
+            <Font name="Ebrima Bold" size="13.0" />
+         </font>
+      </Button>
+      <Button alignment="CENTER" layoutX="34.0" layoutY="126.0" mnemonicParsing="false" opacity="0.82" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Materia menos matricualda">
+         <font>
+            <Font name="Ebrima Bold" size="13.0" />
+         </font>
+      </Button>
+      <Button alignment="CENTER" layoutX="34.0" layoutY="200.0" mnemonicParsing="false" opacity="0.82" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Promedio por materias matriculadas">
+         <font>
+            <Font name="Ebrima Bold" size="13.0" />
+         </font>
+      </Button>
+      <Label layoutX="35.0" layoutY="98.0" opacity="0.9" prefHeight="17.0" prefWidth="132.0" style="-fx-background-color: lightgrey;">
+         <font>
+            <Font name="Ebrima Bold" size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="35.0" layoutY="325.0" opacity="0.88" prefHeight="17.0" prefWidth="132.0" style="-fx-background-color: lightgrey;">
+         <font>
+            <Font name="Ebrima Bold" size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="35.0" layoutY="166.0" opacity="0.84" prefHeight="17.0" prefWidth="132.0" style="-fx-background-color: lightgrey;">
+         <font>
+            <Font name="Ebrima Bold" size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="35.0" layoutY="247.0" opacity="0.87" prefHeight="17.0" prefWidth="132.0" style="-fx-background-color: lightgrey;">
+         <font>
+            <Font name="Ebrima Bold" size="13.0" />
+         </font>
+      </Label>
+      <Button layoutX="16.0" layoutY="361.0" mnemonicParsing="false" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="&lt;" />
    </children>
 </AnchorPane>
