--- a/src/ui/summary.fxml
+++ b/src/ui/summary.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.SummaryController">
    <children>
       <ImageView fitHeight="407.0" fitWidth="607.0" layoutX="-1.0" layoutY="-1.0" opacity="0.79">
          <image>
@@ -20,7 +20,7 @@
             <Font name="Ebrima Bold" size="19.0" />
          </font>
       </Label>
-      <ScrollPane layoutX="391.0" layoutY="86.0" opacity="0.87" prefHeight="301.0" prefWidth="196.0">
+      <ScrollPane fx:id="courses" layoutX="391.0" layoutY="86.0" opacity="0.87" prefHeight="301.0" prefWidth="196.0">
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" opacity="0.0" prefHeight="335.0" prefWidth="160.0">
                <children>
@@ -48,7 +48,7 @@
             <Font name="Ebrima Bold" size="13.0" />
          </font>
       </Button>
-      <Button alignment="CENTER" layoutX="34.0" layoutY="126.0" mnemonicParsing="false" opacity="0.82" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Materia menos matricualda">
+      <Button alignment="CENTER" layoutX="34.0" layoutY="126.0" mnemonicParsing="false" opacity="0.82" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Materia menos matriculada">
          <font>
             <Font name="Ebrima Bold" size="13.0" />
          </font>
@@ -58,26 +58,26 @@
             <Font name="Ebrima Bold" size="13.0" />
          </font>
       </Button>
-      <Label layoutX="35.0" layoutY="98.0" opacity="0.9" prefHeight="17.0" prefWidth="132.0" style="-fx-background-color: lightgrey;">
+      <Label fx:id="lbMostEnrolledCourse" layoutX="35.0" layoutY="98.0" opacity="0.9" prefHeight="17.0" prefWidth="132.0" style="-fx-background-color: lightgrey;">
          <font>
             <Font name="Ebrima Bold" size="13.0" />
          </font>
       </Label>
-      <Label layoutX="35.0" layoutY="325.0" opacity="0.88" prefHeight="17.0" prefWidth="132.0" style="-fx-background-color: lightgrey;">
+      <Label fx:id="lbAvarageRegisteredCredits" layoutX="35.0" layoutY="325.0" opacity="0.88" prefHeight="17.0" prefWidth="132.0" style="-fx-background-color: lightgrey;">
          <font>
             <Font name="Ebrima Bold" size="13.0" />
          </font>
       </Label>
-      <Label layoutX="35.0" layoutY="166.0" opacity="0.84" prefHeight="17.0" prefWidth="132.0" style="-fx-background-color: lightgrey;">
+      <Label fx:id="bLessEnrolledCourse" layoutX="35.0" layoutY="172.0" opacity="0.84" prefHeight="17.0" prefWidth="132.0" style="-fx-background-color: lightgrey;">
          <font>
             <Font name="Ebrima Bold" size="13.0" />
          </font>
       </Label>
-      <Label layoutX="35.0" layoutY="247.0" opacity="0.87" prefHeight="17.0" prefWidth="132.0" style="-fx-background-color: lightgrey;">
+      <Label fx:id="lbAvarageEnrolledCourse" layoutX="35.0" layoutY="247.0" opacity="0.87" prefHeight="17.0" prefWidth="132.0" style="-fx-background-color: lightgrey;">
          <font>
             <Font name="Ebrima Bold" size="13.0" />
          </font>
       </Label>
-      <Button layoutX="16.0" layoutY="361.0" mnemonicParsing="false" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="&lt;" />
+      <Button layoutX="16.0" layoutY="361.0" mnemonicParsing="false" onAction="#back" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="&lt;" />
    </children>
 </AnchorPane>
