--- a/bin/ui/contact.fxml
+++ b/bin/ui/contact.fxml
@@ -2,7 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -41,7 +42,7 @@
          <font>
             <Font size="10.0" />
          </font></Button>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="168.0" layoutY="11.0" opacity="0.83" prefHeight="27.0" prefWidth="154.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Nombre del estudiante">
+      <Label fx:id="name" alignment="CENTER" contentDisplay="CENTER" layoutX="168.0" layoutY="11.0" opacity="0.83" prefHeight="27.0" prefWidth="154.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Nombre del estudiante">
          <font>
             <Font name="Ebrima Bold" size="12.0" />
          </font>
@@ -82,11 +83,6 @@
             <Font name="Ebrima Bold" size="13.0" />
          </font>
       </Label>
-      <ScrollPane layoutX="14.0" layoutY="49.0" opacity="0.78" prefHeight="339.0" prefWidth="142.0">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="342.0" prefWidth="141.0" />
-        </content>
-      </ScrollPane>
       <Label layoutX="45.0" layoutY="14.0" text="Contactos">
          <font>
             <Font name="System Bold" size="15.0" />
@@ -97,5 +93,11 @@
             <Font size="10.0" />
          </font>
       </Button>
+      <TableView fx:id="contactList" layoutX="16.0" layoutY="44.0" onMouseClicked="#selectRow" prefHeight="345.0" prefWidth="125.0">
+        <columns>
+          <TableColumn fx:id="nameColumn" prefWidth="62.0" text="Nombre" />
+          <TableColumn fx:id="apellidoColumn" prefWidth="61.0" text="Apellido" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
