--- a/bin/ui/courses.fxml
+++ b/bin/ui/courses.fxml
@@ -2,8 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -16,28 +16,24 @@
             <Image url="@../../documents/images/scheduleback.jpg" />
          </image>
       </ImageView>
-      <TextArea fx:id="coursesInformation" layoutX="243.0" layoutY="72.0" opacity="0.89" prefHeight="154.0" prefWidth="294.0" />
-      <Label layoutX="24.0" layoutY="15.0" opacity="0.83" prefHeight="42.0" prefWidth="199.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Materias">
-         <font>
-            <Font name="Ebrima Bold" size="19.0" />
-         </font>
-      </Label>
-      <Label layoutX="243.0" layoutY="15.0" opacity="0.83" prefHeight="42.0" prefWidth="259.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Informacion de las materias">
+      <Label layoutX="71.0" layoutY="14.0" opacity="0.83" prefHeight="42.0" prefWidth="199.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Materias">
          <font>
             <Font name="Ebrima Bold" size="19.0" />
          </font>
       </Label>
       <Button layoutX="565.0" layoutY="369.0" mnemonicParsing="false" onAction="#next" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="&gt;" />
       <Button layoutX="520.0" layoutY="369.0" mnemonicParsing="false" onAction="#back" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="&lt;" />
-      <ScrollPane layoutX="26.0" layoutY="72.0" opacity="0.87" prefHeight="277.0" prefWidth="196.0">
-        <content>
-          <AnchorPane fx:id="courses" minHeight="0.0" minWidth="0.0" opacity="0.0" prefHeight="286.0" prefWidth="160.0" />
-        </content>
-      </ScrollPane>
-      <Button layoutX="390.0" layoutY="262.0" mnemonicParsing="false" onAction="#sortByCredtis" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="Clasificar por creditos" />
-      <Button layoutX="250.0" layoutY="316.0" mnemonicParsing="false" onAction="#sortByNRC" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="Clasificar por NRC" />
-      <Button layoutX="250.0" layoutY="262.0" mnemonicParsing="false" onAction="#sortbyName" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="Clasificar por nombre" />
-      <Button layoutX="390.0" layoutY="316.0" mnemonicParsing="false" onAction="#sortByNameTeacher" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="Clasificar por nombre de profesor" />
-      <Button layoutX="26.0" layoutY="356.0" mnemonicParsing="false" onAction="#addCourse" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="Agregar Materias" />
+      <Button layoutX="381.0" layoutY="276.0" mnemonicParsing="false" onAction="#sortByCredtis" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="Clasificar por creditos" />
+      <Button layoutX="85.0" layoutY="276.0" mnemonicParsing="false" onAction="#sortByNRC" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="Clasificar por NRC" />
+      <Button layoutX="85.0" layoutY="316.0" mnemonicParsing="false" onAction="#sortbyName" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="Clasificar por nombre de materia" />
+      <Button layoutX="317.0" layoutY="316.0" mnemonicParsing="false" onAction="#sortByNameTeacher" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="Clasificar por nombre de profesor" />
+      <TableView fx:id="coursesTV" layoutX="73.0" layoutY="67.0" opacity="0.91" prefHeight="202.0" prefWidth="455.0">
+        <columns>
+          <TableColumn fx:id="coursesTC" prefWidth="138.0" text="Nombre" />
+          <TableColumn fx:id="creditsTC" prefWidth="87.0" text="Creditos" />
+            <TableColumn fx:id="teacherNameTC" prefWidth="144.0" text="Profesor" />
+            <TableColumn fx:id="nrcTC" prefWidth="84.0" text="NRC" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
