--- a/src/ui/contact.fxml
+++ b/src/ui/contact.fxml
@@ -21,7 +21,7 @@
          <font>
             <Font name="System Bold" size="15.0" />
          </font></Label>
-      <Button layoutX="545.0" layoutY="182.0" mnemonicParsing="false" onAction="#editContact" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="Editar" />
+      <Button layoutX="535.0" layoutY="184.0" mnemonicParsing="false" onAction="#deleteContact" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="Eliminar" />
       <TextArea fx:id="notes" disable="true" layoutX="322.0" layoutY="219.0" opacity="0.68" prefHeight="82.0" prefWidth="246.0" />
       <ImageView fx:id="picture" fitHeight="125.0" fitWidth="129.0" layoutX="183.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true">
          <image>
