--- a/src/ui/summary.fxml
+++ b/src/ui/summary.fxml
@@ -2,7 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -20,19 +21,6 @@
             <Font name="Ebrima Bold" size="19.0" />
          </font>
       </Label>
-      <ScrollPane fx:id="courses" layoutX="391.0" layoutY="86.0" opacity="0.87" prefHeight="301.0" prefWidth="196.0">
-         <content>
-            <AnchorPane minHeight="0.0" minWidth="0.0" opacity="0.0" prefHeight="335.0" prefWidth="160.0">
-               <children>
-                  <Button alignment="CENTER" layoutX="-81.0" layoutY="23.0" mnemonicParsing="false" opacity="0.82" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Promedio de materias matriculadas">
-                     <font>
-                        <Font name="Ebrima Bold" size="13.0" />
-                     </font>
-                  </Button>
-               </children>
-            </AnchorPane>
-         </content>
-      </ScrollPane>
       <Label alignment="CENTER" layoutX="390.0" layoutY="56.0" opacity="0.83" prefHeight="27.0" prefWidth="199.0" style="-fx-background-color: #FF8648; -fx-border-color: lightgrey;" text="Materias">
          <font>
             <Font name="Ebrima Bold" size="19.0" />
@@ -79,5 +67,10 @@
          </font>
       </Label>
       <Button layoutX="16.0" layoutY="361.0" mnemonicParsing="false" onAction="#back" style="-fx-background-color: lightgrey; -fx-border-color: grey;" text="&lt;" />
+      <TableView fx:id="coursesTV" layoutX="419.0" layoutY="102.0" prefHeight="221.0" prefWidth="142.0">
+        <columns>
+          <TableColumn fx:id="coursesTC" prefWidth="139.0" text="Cursos" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
